gatekeeper/constraints/k8sblockreplicas-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sBlockReplicas
metadata:
  name: block-replicas-gt-5
spec:
  enforcementAction: deny
  match:
    kinds:
      - apiGroups: ["apps"]
        kinds: ["Deployment"]
    namespaces:
      - "demo"
  parameters:
    maxReplicas: 5
